# benrbray.github.io-hakyll

./: .gitignore  Biblio.hs  Makefile  README.md  benrbray-github-io.cabal  cabal.project  index.html  justfile  research.md  resources.md  site.hs
_site/: about.html  archive.html  blog.html  contact.html  index.html  projects.html  resources.html
_site/css/: article.css  style.css
_site/posts/: expectation-maximization.html  gradients-row-vectors.html  hakyll-setup.html  newton-as-fpi.html  rmt.html  sampling.html
_site/projects/: aask.html  collisions.html  dhgp.html  differ.html  domain-color.html  hough-transform.html  incompressible-fluid-simulation.html  maze.html  molecules.html  noteworthy.html  prosemirror-math.html  rigid-body-dynamics.html  seam-carving.html
_site/tags/: algorithms.html  calculus.html  category-theory.html  functional-programming.html  game-dev.html  geometry.html  graph-theory.html  graphics.html  haskell.html  linear-algebra.html  machine-learning.html  math.html  numerical-methods.html  optimization.html  statistics.html  yoneda-lemma.html
bib/: category-theory.bib  refs.bib  refs.csl.json
csl/: notitle.csl  simple.csl
css/: article.css  default.css  pandoc-syntax.css  style.css
docs/: CNAME  atom.xml  blog.html  index.html  projects.html  resources.html  resume.html
fixlater/: boggle.html  collisions-convexity.html
pages/: blog.md  resources.md
posts/: abstract-algebra-modules.md  expectation-maximization.md  gradients-row-vectors.md  hakyll-setup.md  rmt.md
projects/: aask.md  dhgp.md  differ.md  domain-color.md  flash-games.md  hough-transform.md  molecules.md  noteworthy.md  prosemirror-math.md  seam-carving.md  type-safari.md  unboggler.md
src/: Biblio.hs  site.hs
static/: resume.html
templates/: archive.html  default-hakyll.html  default.html  page.html  post-list.html  post.html  project-grid.html  project-list.html  resume.html
(+173 files in other folders)
