name:               benrbray-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.14.*
                  , blaze-html
                  , process
                  , pandoc, pandoc-types
                  , mtl
                  , text, string-conversions
                  , data-default
                  , time, time-locale-compat
                  , containers
                  , extra
                  -- these can be removed along with Biblio.hs
                  -- once my pull request to Hakyll is merged
                  , bytestring
                  , binary
  other-modules:  KaTeX, Biblio
  ghc-options:      -threaded
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
